Fix mobile navbar overlap

--- a/src/integrations/community-plugins.scss
+++ b/src/integrations/community-plugins.scss
@@ -271,11 +271,6 @@ body.is-phone.hider-sidebar-buttons {
   }
 }
 
-// Excalidraw https://github.com/zsviczian/obsidian-excalidraw-plugin
-body.is-mobile .excalidraw .FixedSideContainer {
-  padding-top: 0;
-}
-
 // Novel Word Count https://github.com/isaaclyman/novel-word-count-obsidian
 body:not(.is-mobile):not(.compact-actions-off) .mod-sidedock .workspace-leaf-content.novel-word-count--active > .nav-header {
   &:not(:hover) .nav-buttons-container {
